# freecad-mcp

./: LICENSE  README.md  pyproject.toml
addon/FreeCADMCP/: InitGui.py
addon/FreeCADMCP/rpc_server/: __init__.py  parts_library.py  rpc_server.py  serialize.py
examples/adk/: __init__.py  agent.py
examples/langchain/: react.py
src/freecad_mcp/: server.py
